<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/colour_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start">

        <TextView
            android:id="@+id/colour_hue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="start"
            android:text="@string/DYNAMIC" />

        <TextView
            android:id="@+id/separator1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/colour_hue"
            android:layout_toRightOf="@+id/colour_hue"
            android:text="@string/separator" />

        <TextView
            android:id="@+id/colour_saturation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/separator1"
            android:layout_toRightOf="@+id/separator1"
            android:text="@string/DYNAMIC" />

        <TextView
            android:id="@+id/separator2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/colour_saturation"
            android:layout_toRightOf="@+id/colour_saturation"
            android:text="@string/separator" />

        <TextView
            android:id="@+id/colour_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/separator2"
            android:layout_toRightOf="@+id/separator2"
            android:text="@string/DYNAMIC" />
    </LinearLayout>

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/colour_information"
        android:gravity="center_horizontal"
        android:text="@string/no_results"
        android:textAlignment="center"
        android:textSize="25sp" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/configure_sorting_order"
        android:layout_below="@+id/colour_information"
        android:layout_gravity="fill" />

    <Button
        android:id="@+id/configure_sorting_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:nestedScrollingEnabled="true"
        android:onClick="onClickButtonSaveSortingOrder"
        android:text="@string/configure_sorting_order" />


</RelativeLayout>
